// Copyright 2022 CeresDB Project Authors. Licensed under Apache-2.0.

// Sst types
syntax = "proto3";
package sst;

import "common.proto";

message TSIDs{
  repeated uint64 tsids = 1;
}

message IndexValue{
  map<string, TSIDs> value = 1;
}

message SstMetaData {
  // Min key in the sst
  bytes min_key = 1;
  // Max key in the sst
  bytes max_key = 2;
  // Max sequence number in the sst
  uint64 max_sequence = 3;
  // The time range of the sst
  common.TimeRange time_range = 4;
  common.TableSchema schema = 5;
  uint64 size = 6;
  uint64 row_num = 7;
  map<string, IndexValue> index_map = 8;
}
